URL Parameter should be properly encoded #76